fix{a11ty}: increase colour contrast of Select

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -610,7 +610,7 @@ justify-content: space-between;
           h3{
             margin:0;
             em{
-              color:gray;
+              color:#757575;
               font-size:0.6em;
             }
           }
